# ros2-learning

./: README.md  readme.md
auto_aim_demo/: readme.md
auto_aim_demo/src/client/: CMakeLists.txt  package.xml
auto_aim_demo/src/client/launch/: client.launch.py
auto_aim_demo/src/client/src/: client.cpp
auto_aim_demo/src/interfaces/: CMakeLists.txt  package.xml
auto_aim_demo/src/interfaces/srv/: AutoAim.srv
auto_aim_demo/src/server/: CMakeLists.txt  package.xml
auto_aim_demo/src/server/config/: my_config.yaml
auto_aim_demo/src/server/launch/: server.launch.py
auto_aim_demo/src/server/src/: server.cpp
install/: local_setup.sh  setup.sh
install/british_system/lib/british_system/: british_pub
install/british_system/share/british_system/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  (+1 more)
log/: latest_build
publisher/install/: local_setup.sh  setup.sh
publisher/log/: latest_build
publisher/src/british_system/: package.xml  setup.cfg  setup.py
publisher/src/metric_system/: package.xml  setup.cfg  setup.py
publisher_cpp/: README.md
publisher_cpp/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
publisher_cpp/log/: latest_build
publisher_cpp/src/british_system/: CMakeLists.txt
publisher_cpp/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
publisher_cpp/src/log/: latest_build
publisher_cpp/src/metric_system/: CMakeLists.txt
publisher_cpp/src/metric_system/src/: metric_system_node.cpp
src/british_system/: CMakeLists.txt  package.xml
src/british_system/src/: british_pub.cpp  pub_node.cpp
src/cli_ser/: CMakeLists.txt  package.xml
src/cli_ser/config/: canshu.yaml
src/cli_ser/src/: node_cli.cpp  node_ser.cpp
src/metric_system/: CMakeLists.txt  package.xml
src/metric_system/src/: metric_system.cpp  sub_node.cpp
src/msgs/: CMakeLists.txt  package.xml
src/msgs/msg/: InchToMeter.msg
src/my_launch/: CMakeLists.txt  package.xml
src/my_launch/launch/: my_launch.py
src/my_msg/: CMakeLists.txt  package.xml
src/other_packages/: CMakeLists.txt  package.xml
src/other_packages/src/: node_pub.cpp
src/serve/: CMakeLists.txt  package.xml
src/serve/config/: par.yaml
src/serve/src/: client.cpp  server.cpp
src/work_launch/: CMakeLists.txt  package.xml
src/work_launch/launch/: start.launch.py
src/zidingyi_xiaoxijiekou/: CMakeLists.txt  package.xml
src/zidingyi_xiaoxijiekou/msg/: Huati.msg
yuyuan/: README.md
yuyuan/src/british_system/: CMakeLists.txt  package.xml
yuyuan/src/metric_system/: CMakeLists.txt  package.xml
yuyuan/src/my_msg/: CMakeLists.txt  package.xml
yuyuan/src/work_launch/: CMakeLists.txt  package.xml
(+104 files in other folders)
